--- a/package.json
+++ b/package.json
@@ -12,19 +12,28 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.1",
+    "@redux-devtools/extension": "^3.2.2",
+    "axios": "^0.25.0",
+    "history": "^5.2.0",
+    "immer": "^9.0.12",
     "lodash": "^4.17.21",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.2",
+    "react-hot-toast": "^2.2.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
+    "redux-first-history": "^5.0.8",
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.178",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-redux": "^7.1.22",
     "@vitejs/plugin-react": "^1.0.7",
     "typescript": "^4.5.4",
