--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@redux-devtools/extension": "^3.2.2",
     "axios": "^0.25.0",
     "history": "^5.2.0",
+    "i18next": "^21.6.11",
     "immer": "^9.0.12",
     "lodash": "^4.17.21",
     "prettier": "^2.5.1",
@@ -23,6 +24,8 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.2.2",
     "react-hot-toast": "^2.2.0",
+    "react-i18next": "^11.15.4",
+    "react-intl": "^5.24.6",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
@@ -34,6 +37,7 @@
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-helmet": "^6.1.5",
+    "@types/react-intl": "^3.0.0",
     "@types/react-redux": "^7.1.22",
     "@vitejs/plugin-react": "^1.0.7",
     "typescript": "^4.5.4",
