--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
@@ -14,7 +15,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "paths": {
+      "utils": ["./src/utils"],
+      "types/*": ["src/types/*"],
+      "services/*": ["./src/services/*"],
+      "redux/hooks": ["./src/redux/hooks"],
+      "ui/*": ["./src/ui/*"],
+  }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
