--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "start": "vite preview",
-    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'"
+    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'",
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -40,8 +41,12 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-intl": "^3.0.0",
     "@types/react-redux": "^7.1.22",
+    "@typescript-eslint/eslint-plugin": "^5.11.0",
+    "@typescript-eslint/parser": "^5.11.0",
     "@vitejs/plugin-react": "^1.0.7",
-    "typescript": "^4.5.4",
+    "eslint": "^8.8.0",
+    "eslint-config-prettier": "^8.3.0",
+    "typescript": "^4.5.5",
     "vite": "^2.8.0"
   }
 }
