--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "tsc && vite build",
     "start": "vite preview",
     "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'",
-    "lint": "eslint src --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "test": "cypress run",
+    "test:live": "cypress run-ct"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -34,6 +36,9 @@
     "redux-saga": "^1.1.3"
   },
   "devDependencies": {
+    "@cypress/react": "^5.12.3",
+    "@cypress/vite-dev-server": "^2.2.2",
+    "@cypress/webpack-dev-server": "^1.8.1",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.17",
     "@types/react": "^17.0.33",
@@ -44,6 +49,7 @@
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "@vitejs/plugin-react": "^1.0.7",
+    "cypress": "^9.4.1",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "typescript": "^4.5.5",
