--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "vite preview",
     "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
-    "test": "cypress run",
-    "test:live": "cypress run-ct"
+    "test": "cypress run-ct"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -33,7 +32,8 @@
     "react-router-dom": "^6.2.1",
     "redux": "^4.1.2",
     "redux-first-history": "^5.0.8",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "@cypress/react": "^5.12.3",
