--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "vite preview",
     "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
-    "test": "cypress run-ct"
+    "test": "cypress run-ct",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -16,6 +17,7 @@
     "@mui/material": "^5.4.1",
     "@redux-devtools/extension": "^3.2.2",
     "axios": "^0.25.0",
+    "connected-react-router": "^6.9.2",
     "history": "^5.2.0",
     "i18next": "^21.6.11",
     "immer": "^9.0.12",
@@ -29,7 +31,7 @@
     "react-i18next": "^11.15.4",
     "react-intl": "^5.24.6",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^5.3.0",
     "redux": "^4.1.2",
     "redux-first-history": "^5.0.8",
     "redux-saga": "^1.1.3",
@@ -46,12 +48,14 @@
     "@types/react-helmet": "^6.1.5",
     "@types/react-intl": "^3.0.0",
     "@types/react-redux": "^7.1.22",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "@vitejs/plugin-react": "^1.0.7",
     "cypress": "^9.4.1",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.4",
     "typescript": "^4.5.5",
     "vite": "^2.8.0"
   }
