--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.2",
     "redux-first-history": "^5.0.8",
-    "redux-saga": "^1.1.3",
-    "socket.io-client": "^4.4.1"
+    "redux-saga": "^1.1.3"
   },
   "devDependencies": {
     "@cypress/react": "^5.12.3",
