--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "test": "cypress run-ct",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "generate": "node scripts"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -22,6 +23,7 @@
     "i18next": "^21.6.11",
     "immer": "^9.0.12",
     "lodash": "^4.17.21",
+    "nanospinner": "^1.0.0",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -34,7 +36,8 @@
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.2",
     "redux-first-history": "^5.0.8",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
     "@cypress/react": "^5.12.3",
@@ -52,9 +55,12 @@
     "@typescript-eslint/parser": "^5.11.0",
     "@vitejs/plugin-react": "^1.0.7",
     "cypress": "^9.4.1",
+    "ejs": "^3.1.6",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
     "husky": "^7.0.4",
+    "inquirer": "^8.2.0",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "vite": "^2.8.0"
   }
