--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "paths": {
-      "utils": ["./src/utils"],
-      "types/*": ["src/@types/*"],
-      "services/*": ["./src/services/*"],
-      "redux/hooks": ["./src/redux/hooks"],
-      "ui/*": ["./src/ui/*"]
+      "app/*": ["./src/*"]
     },
     "types": ["cypress"]
   },
