--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "test": "cypress run-ct",
     "prepare": "husky install",
-    "generate": "node scripts"
+    "make": "ts-node ./src/scripts",
+    "collect": "ts-node src/scripts/collect.ts",
+    "check": "depcheck"
   },
   "dependencies": {
     "@emotion/react": "^11.7.1",
@@ -21,17 +23,16 @@
     "connected-react-router": "^6.9.2",
     "history": "^5.2.0",
     "i18next": "^21.6.11",
+    "i18next-browser-languagedetector": "^6.1.3",
     "immer": "^9.0.12",
     "lodash": "^4.17.21",
     "nanospinner": "^1.0.0",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.2.2",
     "react-hot-toast": "^2.2.0",
     "react-i18next": "^11.15.4",
-    "react-intl": "^5.24.6",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "redux": "^4.1.2",
@@ -43,21 +44,25 @@
     "@cypress/react": "^5.12.3",
     "@cypress/vite-dev-server": "^2.2.2",
     "@cypress/webpack-dev-server": "^1.8.1",
+    "@types/glob": "^7.2.0",
+    "@types/history": "^5.0.0",
+    "@types/inquirer": "^8.2.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.17",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
-    "@types/react-helmet": "^6.1.5",
-    "@types/react-intl": "^3.0.0",
     "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "@typescript-eslint/parser": "^5.11.0",
     "@vitejs/plugin-react": "^1.0.7",
     "cypress": "^9.4.1",
+    "depcheck": "^1.4.3",
     "ejs": "^3.1.6",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
+    "glob": "^7.2.0",
+    "globby": "^13.1.1",
     "husky": "^7.0.4",
     "inquirer": "^8.2.0",
     "ts-node": "^10.5.0",
