--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "start": "vite preview",
-    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}'",
+    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}' --loglevel=error",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "test": "cypress run-ct",
     "test:live": "cypress open",
@@ -35,9 +35,9 @@
     "react-hot-toast": "^2.2.0",
     "react-i18next": "^11.15.4",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.3.0",
+    "react-router-dom": "^6.0.2",
     "redux": "^4.1.2",
-    "redux-first-history": "^5.0.8",
+    "redux-first-history": "^5.0.2",
     "redux-saga": "^1.1.3",
     "socket.io-client": "^4.4.1"
   },
@@ -46,6 +46,7 @@
     "@cypress/vite-dev-server": "^2.2.2",
     "@cypress/webpack-dev-server": "^1.8.1",
     "@types/ejs": "^3.1.0",
+    "@types/flat": "^5.0.2",
     "@types/glob": "^7.2.0",
     "@types/history": "^5.0.0",
     "@types/inquirer": "^8.2.0",
@@ -63,6 +64,8 @@
     "ejs": "^3.1.6",
     "eslint": "^8.8.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.28.0",
+    "flat": "^5.0.2",
     "glob": "^7.2.0",
     "globby": "^13.1.1",
     "husky": "^7.0.4",
