--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "start": "vite preview",
-    "format": "prettier --write 'src/**/*.{ts,tsx,js,jsx}' --loglevel=error",
-    "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --loglevel=error --write",
+    "format:all": "prettier --write 'src/**/*.{ts,tsx,js,jsx}' --loglevel=error",
+    "lint": "eslint",
+    "lint:all": "eslint src --ext .js,.jsx,.ts,.tsx",
     "test": "cypress run-ct",
     "test:live": "cypress open",
     "prepare": "husky install",
