--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "root": true,
   "parser": "@typescript-eslint/parser",
   "plugins": ["@typescript-eslint"],
-  "ignorePatterns": ["**/*.txt"],
+"ignorePatterns": ["**/*.txt", "README.md"],
   "extends": [
     "eslint:recommended",
     "plugin:react/recommended",
