--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint:all": "eslint src --ext .js,.jsx,.ts,.tsx",
     "test": "cypress run-ct",
     "test:live": "cypress open",
-    "prepare": "husky install",
+    "prepare": "is-ci || husky install",
     "make": "ts-node src/scripts/make.ts",
     "collect": "ts-node src/scripts/collect.ts",
     "check": "depcheck"
@@ -41,6 +41,7 @@
     "redux": "^4.1.2",
     "redux-first-history": "^5.0.8",
     "redux-saga": "^1.1.3",
+    "reselect": "^4.1.5",
     "socket.io-client": "^4.4.1"
   },
   "devDependencies": {
@@ -71,6 +72,7 @@
     "globby": "^13.1.1",
     "husky": "^7.0.4",
     "inquirer": "^8.2.0",
+    "is-ci": "^3.0.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
     "vite": "^2.8.0"
