--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.4.1",
+    "@reach/router": "^1.3.4",
     "@redux-devtools/extension": "^3.2.2",
     "axios": "^0.25.0",
     "history": "^5.2.0",
@@ -54,6 +55,7 @@
     "@types/inquirer": "^8.2.0",
     "@types/lodash": "^4.14.178",
     "@types/node": "^17.0.17",
+    "@types/reach__router": "^1.3.10",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/react-redux": "^7.1.22",
