fixed dynamic import error in Vite

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "start": "vite preview",
+    "preview": "vite preview",
     "format": "prettier --loglevel=error --write",
     "format:all": "prettier --write 'src/**/*.{ts,tsx,js,jsx}' --loglevel=error",
     "lint": "eslint",
@@ -75,6 +75,7 @@
     "is-ci": "^3.0.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
-    "vite": "^2.8.0"
+    "vite": "^2.8.0",
+    "vite-plugin-react-lazy": "^0.1.1"
   }
 }
