--- a/package.json
+++ b/package.json
@@ -75,7 +75,6 @@
     "is-ci": "^3.0.1",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
-    "vite": "^2.8.0",
-    "vite-plugin-react-lazy": "^0.1.1"
+    "vite": "^2.8.0"
   }
 }
